fix(css): change dark mode header color and ul/ol margin error

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -50,31 +50,37 @@ main {
 	margin: auto;
 	padding: 2em 1em;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font: bold;
+
+[class="light"] {
+	h1, h2, h3, h4, h5, h6 {
+		color: rgb(var(--black));
+	}
+}
+[class="dark"] {
+	h1, h2, h3, h4, h5, h6 {
+		color: rgb(white);
+	}
+}
+
+h1, h2, h3, h4, h5, h6 {
 	margin: 0 0 0.5rem 0;
-	color: rgb(var(--black));
 	line-height: 1.2;
 }
-h1 {
+h1, h2, h3, h4 {
 	font: bold;
+}
+h1 {
 	font-size: 3.052em;
 }
 h2 {
-	font:bold;
-	font-size: 2.341em;
+	margin-top: 1cm;
+	font-size: 2.4em;
 }
 h3 {
-	font: bold;
-	font-size: 1.953em;
+	margin-top: 0.8cm;
+	font-size: 1.6em;
 }
 h4 {
-	font: bold;
 	font-size: 1.563em;
 }
 h5 {
@@ -91,10 +97,18 @@ a:hover {
 	color: var(--accent);
 }
 p {
-	margin-bottom: 1em;
+	margin-top: 0.5cm;
 }
-.prose p {
-	margin-bottom: 2em;
+ul, ol {
+	margin: 0px 0px 0px 15px;
+	padding: 0px 0px 0px 15px;
+	list-style-position: outside;
+}
+ul {
+	list-style-type: circle;
+}
+ol {
+	list-style-type: unset;
 }
 textarea {
 	width: 100%;
@@ -126,7 +140,9 @@ blockquote {
 	border-left: 4px solid var(--accent);
 	padding: 0 0 0 20px;
 	margin: 0px;
-	font-size: 1.333em;
+	font-size: 18px;
+	font-family: 'Courier New', Courier, monospace;
+	text-align: justify;
 }
 hr {
 	border: none;
